build login, logout, change password

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ REACT_APP_DOMAIN_HOME='http://cmmsapi.highnote.vn'
 REACT_APP_API_PREFIX='api'
 REACT_APP_TOKEN_KEY = 'userToken'
 PORT = 4200
+SKIP_PREFLIGHT_CHECK=true
